# skills

./: .gitignore  pyproject.toml  server.py
analyze-ai-product/: SKILL.md
analyze-ai-product/agents/: openai.yaml
analyze-ai-product/references/: analysis-templates.md  company-analysis-template.md
analyze-company-product/: SKILL.md
analyze-company-product/agents/: openai.yaml
analyze-company-product/references/: analysis-templates.md  company-analysis-template.md
decode-paper/: SKILL.md
decode-paper/agents/: openai.yaml
decode-paper/references/: analysis-templates.md
figma-prd-prototype/: SKILL.md  patterns.md  pitfalls.md  prd-parsing.md
figma-style-migration/: SKILL.md  pitfalls.md  strategies.md  style-catalog.md
review-prototype-quality/: SKILL.md
review-prototype-quality/agents/: openai.yaml
review-prototype-quality/references/: analysis-templates.md
